k8s/development/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-nginx
  namespace: api-_BRANCH_SLUG_
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: api-nginx
        image: docker.io/iedereenhelpt/api-nginx:_COMMIT_
        imagePullPolicy: Always
        ports:
        - name: https
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
