k8s/development/nginx/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-nginx
  namespace: api-_BRANCH_SLUG_
spec:
  clusterIP: None
  ports:
  - name: tcp-http
    protocol: TCP
    port: 80
    targetPort: 80
