k8s/development/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-nginx
  namespace: api-_BRANCH_SLUG_
spec:
  rules:
  - host: _BRANCH_SLUG_.iedereenhelpt.dev
    http:
      paths:
      - backend:
          serviceName: api-nginx
          servicePort: 80
